--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,13 @@
   max-width: 340px;
   border: 1px solid goldenrod;
   transition: 500ms;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .card-img{
   width: 320px;
   padding: 10px;
+  /* border-radius: 11px; */
 }
 .card-details{
   padding: 0px 10px ;
@@ -37,7 +40,7 @@
 .nav-btn{
   margin-right: 20px;
 
-  background-color: rgb(117, 20, 207);
+  background-color: rgb(152, 35, 144);
   color: white;
   border: 0px;
   border-radius: 20px;
@@ -45,13 +48,17 @@
   cursor: pointer;
 }
 .nav-btn:hover{
-  background-color: rgb(93, 5, 174);
+  background-color: rgb(133, 26, 125);
   transition: 400ms;
 }
 .nav-btn>h3{
   margin: 10px;
+  
 
 }
 .navbar>h2>span{
   color: red;
+}
+.navbar>h2{
+  cursor: pointer;
 }
