--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App{
-  margin-left:20px;
+  
+  overflow-x: hidden;
 
 }
 .card-wrap{
@@ -34,6 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-left: 20px;
  
  
 }
@@ -62,3 +64,21 @@
 .navbar>h2{
   cursor: pointer;
 }
+.details{
+  margin: 20px 10px;
+  max-width: 100%;
+  
+  border: 1px solid rgba(128, 128, 128, 0.295);
+  /* display: inline-block; */
+  
+}
+
+
+.dtl-img{
+  width: 90vw;
+  height: 400px;
+  margin: 15px;
+  
+  
+}
+
