--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App{
+  margin: 20px;
   
   overflow-x: hidden;
 
@@ -31,6 +32,7 @@
   box-shadow: 1px 1px 10px black;
   border: 1px solid rgba(218, 165, 32, 0);
 }
+
 .navbar{
   display: flex;
   align-items: center;
@@ -63,6 +65,10 @@
 }
 .navbar>h2{
   cursor: pointer;
+}
+.ip{
+  
+  text-align: center;
 }
 .details{
   margin: 20px 10px;
